[package]
name = "keepc"
version = "0.1.2"
edition = "2024"
description = "A utility to save and manage useful commands with descriptions"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
tempfile = "3.8"